2.0.4   2012-03-01
 - add: Now using groups of icons for actions rather than buttons
 - add: Tooltips added with small delay for all icon actions
 - add: Tooltips moved to Bootstrap and now only on table elements which
        have been shortened.
 - fix: Improvements to model dialogs.

2.0.3   2012-02-29
 - fix: Page titles made consistent with menu text
 - add: Selecting a domain from the domain list (by clicking logs, mailboxes
        and aliases for example) makes the domain 'sticky' as you browse
        through the application with the option to clear it by going back to
        domains or a page title clear button.
 - add: Minimum mailbox password length can be specified in application.ini 
        addressing issue #8
 - fix: Fix issue #9 by skipping IP check if action is logout.

2.0.2   2012-02-27
 Major UI overhaul. Frontend is now using Bootstrap from Twitter providing an altogether
 prettier, sleeker, consistent and more professional look and feel. A number of small new
 features and bugs fixes. No database schema changes.

0.3.5   2011-09-28
 - add: allow new installers to opt out of the 'new install' developer
        pingback and display a message that it exists on the setup page

0.3.4   2011-09-06
 - fix: https://github.com/opensolutions/ViMbAdmin/issues/3
 - add: Support new mailbox password hashes: crypt, sha1 and salted sha1 and md5
        (old issue 9 from Google Code: http://code.google.com/p/vimbadmin/issues/detail?id=9)
 - fix: Changes in 0.3.2 prevented wildcard aliases
 - add: MD5-CRYPT hashing used by, for example, Dovecot. This addresses:
        http://code.google.com/p/vimbadmin/issues/detail?id=6
       
0.3.3   2011-09-02
 - fix: Critical regression introduced in 0.3.2 preventing the editing of
        aliases

0.3.2   2011-09-01
 - fix: https://github.com/opensolutions/ViMbAdmin/issues/1
 - add: optional parameter in application.ini (skipVersionCheck) to
        tell ViMbAdmin to skip the version check on login