@@ -54,7 +54,7 @@ $( 'document' ).ready( function(){
  * @return Throbber The throbber object
  */
 
-var vm_cookie_expiry_days = 0.12;
+var vm_cookie_expiry_days = 30;
 var vm_prefs = {
 	'data_table_rows' : false
 };
