@@ -1,0 +1,4 @@
+(function($){$.cookie=function(key,value,options){if(arguments.length>1&&(!/Object/.test(Object.prototype.toString.call(value))||value===null||value===undefined)){options=$.extend({},options);if(value===null||value===undefined)options.expires=-1;if(typeof options.expires==="number"){var days=options.expires,t=options.expires=new Date;t.setDate(t.getDate()+days)}value=String(value);return document.cookie=[encodeURIComponent(key),"=",options.raw?value:encodeURIComponent(value),options.expires?"; expires="+
+options.expires.toUTCString():"",options.path?"; path="+options.path:"",options.domain?"; domain="+options.domain:"",options.secure?"; secure":""].join("")}options=value||{};var decode=options.raw?function(s){return s}:decodeURIComponent;var pairs=document.cookie.split("; ");for(var i=0,pair;pair=pairs[i]&&pairs[i].split("=");i++)if(decode(pair[0])===key)return decode(pair[1]||"");return null}})(jQuery);
+(function($){$.jsonCookie=function(key,value,options){if(arguments.length>1){options=$.extend({},options);if(value===null||value===undefined)options.expires=-1;if(typeof options.expires==="number"){var days=options.expires,t=options.expires=new Date;t.setDate(t.getDate()+days)}value=$.toJSON(value);return document.cookie=[key,"=",value,options.expires?"; expires="+options.expires.toUTCString():"",options.path?"; path="+options.path:"",options.domain?"; domain="+options.domain:"",options.secure?"; secure":
+""].join("")}options=value||{};var pairs=document.cookie.split("; ");for(var i=0,pair;pair=pairs[i]&&pairs[i].split("=");i++)if(pair[0]===key)return $.evalJSON(pair[1])||"";return null}})(jQuery);
