@@ -1,4 +1,4 @@
-$("document").ready(function(){$("a[id|='modal-dialog']").bind("click",tt_openModalDialog)});function tt_throbber(size,lines,strokewidth,fallback){if(!fallback)fallback="images/throbber_32px.gif";return new Throbber({"color":"black","size":size,"fade":750,"fallback":fallback,"rotationspeed":0,"lines":lines,"strokewidth":strokewidth,"alpha":1})}
+$("document").ready(function(){$("a[id|='modal-dialog']").bind("click",tt_openModalDialog)});var vm_cookie_expiry_days=0.12;var vm_prefs={"data_table_rows":false};cprefs=$.jsonCookie("vm_prefs");if(cprefs!=null)vm_prefs=cprefs;function tt_throbber(size,lines,strokewidth,fallback){if(!fallback)fallback="images/throbber_32px.gif";return new Throbber({"color":"black","size":size,"fade":750,"fallback":fallback,"rotationspeed":0,"lines":lines,"strokewidth":strokewidth,"alpha":1})}
 function ossToggle(e,Url,data,delElement){e.unbind();if(e.hasClass("disabled"))return;var on=true;if(e.hasClass("btn-danger"))e.removeClass("btn-danger").attr("disabled","disabled");else{on=false;e.removeClass("btn-success").attr("disabled","disabled")}var Throb=tt_throbber(18,10,1,"images/throbber_16px.gif").appendTo($("#throb-"+e.attr("id")).get(0)).start();var ok=false;$.ajax({url:Url,data:data,async:true,cache:false,type:"POST",timeout:1E4,success:function(data){if(data=="ok")ok=true;else ossAddMessage(data,
 "error")},error:ossAjaxErrorHandler,complete:function(){if(!ok)on=!on;if(on)e.html("Yes").addClass("btn-success").removeAttr("disabled");else e.html("No").addClass("btn-danger").removeAttr("disabled");$("#throb-"+e.attr("id")).html("");e.click(function(event){ossToggle(e,Url,data)});if(typeof delElement!=undefined)$(delElement).hide("slow",function(){$(delElement).remove()})}})}
 function tt_openModalDialog(event){event.preventDefault();if($(event.target).is("i"))element=$(event.target).parent();else element=$(event.target);id=element.attr("id").substr(element.attr("id").lastIndexOf("-")+1);if(id.substring(0,4)=="wide")$("#modal_dialog").addClass("modal-wide");else $("#modal_dialog").removeClass("modal-wide");$("#modal_dialog").html('<div id="throb" style="padding-left:230px; padding-top:175px; height:275px;"></div>');var Throb=tt_throbber(100,20,1.8).appendTo($("#throb").get(0)).start();
