@@ -1035,6 +1035,15 @@ Date.parse(a);if(isNaN(x)||x==="")x=Date.parse("01/01/1970 00:00:00");return x},
 var bDecimal=false;Char=sData.charAt(0);if(sValidFirstChars.indexOf(Char)==-1)return null;for(var i=1;i<sData.length;i++){Char=sData.charAt(i);if(sValidChars.indexOf(Char)==-1)return null;if(Char=="."){if(bDecimal)return null;bDecimal=true}}return"numeric"},function(sData){var iParse=Date.parse(sData);if(iParse!==null&&!isNaN(iParse)||typeof sData==="string"&&sData.length===0)return"date";return null},function(sData){if(typeof sData==="string"&&sData.indexOf("<")!=-1&&sData.indexOf(">")!=-1)return"html";
 return null}]);$.fn.DataTable=DataTable;$.fn.dataTable=DataTable;$.fn.dataTableSettings=DataTable.settings;$.fn.dataTableExt=DataTable.ext})(jQuery,window,document,undefined);
 jQuery.fn.dataTableExt.oSort["num-html-asc"]=function(a,b){var x=a.replace(/<.*?>/g,"");var y=b.replace(/<.*?>/g,"");x=parseFloat(x);y=parseFloat(y);return x<y?-1:x>y?1:0};jQuery.fn.dataTableExt.oSort["num-html-desc"]=function(a,b){var x=a.replace(/<.*?>/g,"");var y=b.replace(/<.*?>/g,"");x=parseFloat(x);y=parseFloat(y);return x<y?1:x>y?-1:0};
+(function($){var escapeable=/["\\\x00-\x1f\x7f-\x9f]/g,meta={"\u0008":"\\b","\t":"\\t","\n":"\\n","\u000c":"\\f","\r":"\\r",'"':'\\"',"\\":"\\\\"};$.toJSON=typeof JSON==="object"&&JSON.stringify?JSON.stringify:function(o){if(o===null)return"null";var type=typeof o;if(type==="undefined")return undefined;if(type==="number"||type==="boolean")return""+o;if(type==="string")return $.quoteString(o);if(type==="object"){if(typeof o.toJSON==="function")return $.toJSON(o.toJSON());if(o.constructor===Date){var month=
+o.getUTCMonth()+1,day=o.getUTCDate(),year=o.getUTCFullYear(),hours=o.getUTCHours(),minutes=o.getUTCMinutes(),seconds=o.getUTCSeconds(),milli=o.getUTCMilliseconds();if(month<10)month="0"+month;if(day<10)day="0"+day;if(hours<10)hours="0"+hours;if(minutes<10)minutes="0"+minutes;if(seconds<10)seconds="0"+seconds;if(milli<100)milli="0"+milli;if(milli<10)milli="0"+milli;return'"'+year+"-"+month+"-"+day+"T"+hours+":"+minutes+":"+seconds+"."+milli+'Z"'}if(o.constructor===Array){var ret=[];for(var i=0;i<o.length;i++)ret.push($.toJSON(o[i])||
+"null");return"["+ret.join(",")+"]"}var name,val,pairs=[];for(var k in o){type=typeof k;if(type==="number")name='"'+k+'"';else if(type==="string")name=$.quoteString(k);else continue;type=typeof o[k];if(type==="function"||type==="undefined")continue;val=$.toJSON(o[k]);pairs.push(name+":"+val)}return"{"+pairs.join(",")+"}"}};$.evalJSON=typeof JSON==="object"&&JSON.parse?JSON.parse:function(src){return eval("("+src+")")};$.secureEvalJSON=typeof JSON==="object"&&JSON.parse?JSON.parse:function(src){var filtered=
+src.replace(/\\["\\\/bfnrtu]/g,"@").replace(/"[^"\\\n\r]*"|true|false|null|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?/g,"]").replace(/(?:^|:|,)(?:\s*\[)+/g,"");if(/^[\],:{}\s]*$/.test(filtered))return eval("("+src+")");else throw new SyntaxError("Error parsing JSON, source is not valid.");};$.quoteString=function(string){if(string.match(escapeable))return'"'+string.replace(escapeable,function(a){var c=meta[a];if(typeof c==="string")return c;c=a.charCodeAt();return"\\u00"+Math.floor(c/16).toString(16)+(c%16).toString(16)})+
+'"';return'"'+string+'"'}})(jQuery);
+(function($){$.cookie=function(key,value,options){if(arguments.length>1&&(!/Object/.test(Object.prototype.toString.call(value))||value===null||value===undefined)){options=$.extend({},options);if(value===null||value===undefined)options.expires=-1;if(typeof options.expires==="number"){var days=options.expires,t=options.expires=new Date;t.setDate(t.getDate()+days)}value=String(value);return document.cookie=[encodeURIComponent(key),"=",options.raw?value:encodeURIComponent(value),options.expires?"; expires="+
+options.expires.toUTCString():"",options.path?"; path="+options.path:"",options.domain?"; domain="+options.domain:"",options.secure?"; secure":""].join("")}options=value||{};var decode=options.raw?function(s){return s}:decodeURIComponent;var pairs=document.cookie.split("; ");for(var i=0,pair;pair=pairs[i]&&pairs[i].split("=");i++)if(decode(pair[0])===key)return decode(pair[1]||"");return null}})(jQuery);
+(function($){$.jsonCookie=function(key,value,options){if(arguments.length>1){options=$.extend({},options);if(value===null||value===undefined)options.expires=-1;if(typeof options.expires==="number"){var days=options.expires,t=options.expires=new Date;t.setDate(t.getDate()+days)}value=$.toJSON(value);return document.cookie=[key,"=",value,options.expires?"; expires="+options.expires.toUTCString():"",options.path?"; path="+options.path:"",options.domain?"; domain="+options.domain:"",options.secure?"; secure":
+""].join("")}options=value||{};var pairs=document.cookie.split("; ");for(var i=0,pair;pair=pairs[i]&&pairs[i].split("=");i++)if(pair[0]===key)return $.evalJSON(pair[1])||"";return null}})(jQuery);
 (function(){var SelectParser;SelectParser=function(){function SelectParser(){this.options_index=0;this.parsed=[]}SelectParser.prototype.add_node=function(child){if(child.nodeName==="OPTGROUP")return this.add_group(child);else return this.add_option(child)};SelectParser.prototype.add_group=function(group){var group_position,option,_i,_len,_ref,_results;group_position=this.parsed.length;this.parsed.push({array_index:group_position,group:true,label:group.label,children:0,disabled:group.disabled});_ref=
 group.childNodes;_results=[];for(_i=0,_len=_ref.length;_i<_len;_i++){option=_ref[_i];_results.push(this.add_option(option,group_position,group.disabled))}return _results};SelectParser.prototype.add_option=function(option,group_position,group_disabled){if(option.nodeName==="OPTION"){if(option.text!==""){if(group_position!=null)this.parsed[group_position].children+=1;this.parsed.push({array_index:this.parsed.length,options_index:this.options_index,value:option.value,text:option.text,html:option.innerHTML,
 selected:option.selected,disabled:group_disabled===true?group_disabled:option.disabled,group_array_index:group_position,classes:option.className,style:option.style.cssText})}else this.parsed.push({array_index:this.parsed.length,options_index:this.options_index,empty:true});return this.options_index+=1}};return SelectParser}();SelectParser.select_to_array=function(select){var child,parser,_i,_len,_ref;parser=new SelectParser;_ref=select.childNodes;for(_i=0,_len=_ref.length;_i<_len;_i++){child=_ref[_i];
@@ -1167,7 +1176,7 @@ function obfuscatedEmailLink(coded,key,linktext){shift=coded.length;link="";for(
 function getDialogButton(dialog_selector,button_name){var buttons=$(dialog_selector+" .ui-dialog-buttonpane button");for(var i=0;i<buttons.length;++i){var jButton=$(buttons[i]);if(jButton.text()==button_name)return jButton}return null}String.prototype.htmlEntity=function(){return $("<div/>").text(this.substr()).html()};String.prototype.htmlEntityDecode=function(){return $("<div/>").html(this.substr()).text()};
 String.prototype.ucwords=function(){var arr=this.split(" ");var str="";arr.forEach(function(v){str+=v.charAt(0).toUpperCase()+v.slice(1,v.length)+" "});return str};function htmlEntity(str){return $("<div />").text(str).html()}function htmlEntityDecode(str){return $("<div />").html(str).text()}(function($){$.unserialise=function(Data){var Data=Data.split("&");var Serialised=new Array;$.each(Data,function(){var Properties=this.split("=");Serialised[Properties[0]]=Properties[1]});return Serialised}})(jQuery);
 function randomPassword(pwdLength){var charSet="0123456789abcdefghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";var password="";while(true){for(var x=0;x<pwdLength;x++)password+=charSet.charAt(Math.floor(Math.random()*charSet.length));if(password.search("[a-z]")!=-1&&password.search("[A-Z]")!=-1&&password.search("[0-9]")!=-1)return password}}function isValidEmail(str){return/^([A-Za-z0-9_\-\+\.])+\@([A-Za-z0-9_\-\.])+\.([A-Za-z]{2,4})$/.test(str)};
-$("document").ready(function(){$("a[id|='modal-dialog']").bind("click",tt_openModalDialog)});function tt_throbber(size,lines,strokewidth,fallback){if(!fallback)fallback="images/throbber_32px.gif";return new Throbber({"color":"black","size":size,"fade":750,"fallback":fallback,"rotationspeed":0,"lines":lines,"strokewidth":strokewidth,"alpha":1})}
+$("document").ready(function(){$("a[id|='modal-dialog']").bind("click",tt_openModalDialog)});var vm_cookie_expiry_days=0.12;var vm_prefs={"data_table_rows":false};cprefs=$.jsonCookie("vm_prefs");if(cprefs!=null)vm_prefs=cprefs;function tt_throbber(size,lines,strokewidth,fallback){if(!fallback)fallback="images/throbber_32px.gif";return new Throbber({"color":"black","size":size,"fade":750,"fallback":fallback,"rotationspeed":0,"lines":lines,"strokewidth":strokewidth,"alpha":1})}
 function ossToggle(e,Url,data,delElement){e.unbind();if(e.hasClass("disabled"))return;var on=true;if(e.hasClass("btn-danger"))e.removeClass("btn-danger").attr("disabled","disabled");else{on=false;e.removeClass("btn-success").attr("disabled","disabled")}var Throb=tt_throbber(18,10,1,"images/throbber_16px.gif").appendTo($("#throb-"+e.attr("id")).get(0)).start();var ok=false;$.ajax({url:Url,data:data,async:true,cache:false,type:"POST",timeout:1E4,success:function(data){if(data=="ok")ok=true;else ossAddMessage(data,
 "error")},error:ossAjaxErrorHandler,complete:function(){if(!ok)on=!on;if(on)e.html("Yes").addClass("btn-success").removeAttr("disabled");else e.html("No").addClass("btn-danger").removeAttr("disabled");$("#throb-"+e.attr("id")).html("");e.click(function(event){ossToggle(e,Url,data)});if(typeof delElement!=undefined)$(delElement).hide("slow",function(){$(delElement).remove()})}})}
 function tt_openModalDialog(event){event.preventDefault();if($(event.target).is("i"))element=$(event.target).parent();else element=$(event.target);id=element.attr("id").substr(element.attr("id").lastIndexOf("-")+1);if(id.substring(0,4)=="wide")$("#modal_dialog").addClass("modal-wide");else $("#modal_dialog").removeClass("modal-wide");$("#modal_dialog").html('<div id="throb" style="padding-left:230px; padding-top:175px; height:275px;"></div>');var Throb=tt_throbber(100,20,1.8).appendTo($("#throb").get(0)).start();
